# agent-registry-router

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.mypy.ini  pyproject.toml  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-pypi.yml
evals/: README.md  fixtures.json  report.py  run_eval.py
evals/results/: report.md
examples/fastapi_pinned_bypass/: README.md  main.py
src/agent_registry_router/: __init__.py
src/agent_registry_router/adapters/: __init__.py
src/agent_registry_router/adapters/google_adk/: __init__.py  dispatcher.py
src/agent_registry_router/adapters/openai_agents/: __init__.py  dispatcher.py
src/agent_registry_router/adapters/pydantic_ai/: README.md  __init__.py  dispatcher.py
src/agent_registry_router/core/: __init__.py  classifier.py  events.py  exceptions.py  observability.py  prompting.py  registry.py  routing.py
tests/: test_faiss_classifier.py  test_google_adk_dispatcher.py  test_openai_agents_dispatcher.py  test_prompting.py  test_pydanticai_dispatcher.py  test_routing.py  test_structured_logger.py
